GNOME Bugzilla – Bug 671480
The user-accounts side pane is not wide enough
Last modified: 2012-03-08 16:16:11 UTC
Created attachment 209102 [details] screenshot of the issue Starting with 3.3.91 the user-accounts side pane only shows a few chars before starting ellipsizing if opened from the shell icons grid, that doesn't happen when calling g-c-c directly on the panel though
Fixed in master