user-accounts: Minimum of 200 width for the users list

https://bugzilla.gnome.org/show_bug.cgi?id=671480